--- a/source/content_about_me.html
+++ b/source/content_about_me.html
@@ -34,13 +34,13 @@
 			<ul class="list-group">
 			<li class="list-group-item">
 				<h4>Ph.D. in Electrical Engineering - KAIST</h4>
-				Advisor: <a href="http://rcv.kaist.ac.kr/v2/bbs/member_detail.php?mb_id=%20iskweon" target="_blank">Prof. In So Kweon</a>, Co-Advisor: <a href="https://scholar.google.com/citations?user=nFhLmFkAAAAJ&hl=en" target="_blank">Dr. Yu-Wing Tai</a><br>
+				Advisor: <a href="https://scholar.google.com/citations?user=XA8EOlEAAAAJ&hl=en" target="_blank">Prof. In So Kweon</a>, Co-Advisor: <a href="https://scholar.google.com/citations?user=nFhLmFkAAAAJ&hl=en" target="_blank">Dr. Yu-Wing Tai</a><br>
 				<span class="glyphicon glyphicon-map-marker"></span> Daejeon, Republic of Korea<br>
 				<span class="glyphicon glyphicon-calendar"></span> Feb. 2011 – Aug. 2015
 			</li>
 			<li class="list-group-item">
 				<h4>M.S. in Electrical Engineering - KAIST</h4>
-				Advisor: <a href="http://rcv.kaist.ac.kr/v2/bbs/member_detail.php?mb_id=%20iskweon" target="_blank">Prof. In So Kweon</a><br>
+				Advisor: <a href="https://scholar.google.com/citations?user=XA8EOlEAAAAJ&hl=en" target="_blank">Prof. In So Kweon</a><br>
 				<span class="glyphicon glyphicon-map-marker"></span> Daejeon, Republic of Korea<br>
 				<span class="glyphicon glyphicon-calendar"></span> Feb. 2009 – Feb. 2011
 			</li>
