--- a/source/content_publications_middle.html
+++ b/source/content_publications_middle.html
@@ -8,6 +8,22 @@
 
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/18_cvpr.jpg" style="max-height:170px" class="img-responsive center-block">
+	</div>
+	<div class="col-lg-7">
+		<h3>Tangent Convolutions for Dense Prediction in 3D</h3>
+		<p>Maxim Tatarchenko, Jaesik Park, Vladlen Koltun, and Qian-Yi Zhou<br>
+		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2018<br>
+		</p>
+		<a href="http://vladlen.info/publications/tangent-convolutions-dense-prediction-3d/" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-home"></span> Project Page
+		</a>
+		<p><br></p>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/18_arxiv.jpg" style="max-height:170px" class="img-responsive center-block">
 	</div>
 	<div class="col-lg-7">
